# django-vite-tailwind-boilerplate

./: .gitignore  README.md  package.json  pyproject.toml  vite.config.js
src/: .env.dist
src/_core/: settings.py  urls.py
src/_website/: urls.py
src/_website/templates/: base.html
src/_website/templates/website/: index.html
src/accounts/: models.py
src/accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
src/static/: manifest.json
src/static/css/: style.css
